installer: v.2.6.0 (developer preview RC3) team: 2.1.1 (developer preview RC3)
